# cuda-fused-linear-layer

./: AGENTS.md  CMakeLists.txt  README.md  data_generator.py  note  profile_report (1).ncu-rep  profile_report (4).ncu-rep  profile_report.ncu-rep  verify.py
src/: Base.cu  DeviceInfo.cu  FusedLinearKernel.cu  gemm_wmma.cu  main.cu  opt_wide32.cu
